# final-year-project

./: .gitignore  .gitignore.swp  OPENAI_LUNAR.py  README.md  batch_eval.sh  batch_eval_dqn.sh  batch_eval_est.sh  builder.py  config.py  debug.py  evaluation.py  logger.py  lunarlander.py  main.py  play.py  requirements.txt  test.sh
CAA/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  main.cpp
algorithms/: __init__.py  pid_alg.py
algorithms/pid/: __init__.py  __main__.py  controller.py
algorithms/rl/: play.py  q_learning.sh  run.sh  run_batch.sh  sarsa.sh  scaler.py
algorithms/rl/advanced_deep_q/: README.txt  __main__.py
algorithms/rl/deep_q/: __init__.py  __main__.py
algorithms/rl/deep_sarsa/: __main__.py
algorithms/rl/estimators/: __init__.py  nnestimator.py  (+3 more)
docs/video/: ddqn_acc.mov
environment/: __init__.py  booster.py  boosteragent.py  boosterlander.py  brokenboosterlander.py  builder.py  config.py  detector.py  environment.py  logic.py  lunarlander.py  main.py  noisyboosterlander.py  padenv.py  physics.py  rocketlander.py  sensor.py
evaluation/: acc_broken_ddqn.txt  dqn.txt  gps_broken_ddqn.txt  gps_fail.txt  pid.txt  q_learning_sgd.txt  rr_broken_ddqn.txt  sarsa_sgd.txt  side_booster_fail.txt  test.txt  thrust_broken_ddqn.txt
project/: config.py
project/algorithms/: pid_alg.py
project/environment/: booster.py  boosteragent.py  builder.py  detector.py  environment.py  rocketlander.py
project/util/: stats.py
tests/: test_agent.py  test_environment.py  test_pid.py
util/: __init__.py  graphing.py  progress.py  rendering.py  stats.py
(+73 files in other folders)
